--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "eslint-config-react-app": "^2.1.0",
-    "material-ui": "^1.0.0-beta.37",
+    "material-ui": "^0.20.0",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "save": "^2.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
