--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -14,6 +14,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
+    "react-transition-group": "^2.2.1",
     "save": "^2.3.2",
     "snapsvg": "^0.5.1"
   },
