--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -13,6 +13,8 @@
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-responsive": "^4.0.5",
+    "react-reveal": "^1.2.1",
     "react-scripts": "1.1.1",
     "react-sticky": "^6.0.1",
     "react-transition-group": "^2.2.1",
