--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.2.0",
     "react-responsive": "^4.0.5",
     "react-reveal": "^1.2.1",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "react-sticky": "^6.0.1",
     "react-transition-group": "^2.2.1",
