--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@fortawesome/fontawesome-free-regular": "^5.0.8",
     "@fortawesome/fontawesome-free-solid": "^5.0.8",
     "@fortawesome/react-fontawesome": "0.0.17",
+    "deploy": "^1.0.3",
     "eslint-config-react-app": "^2.1.0",
     "font-awesome": "^4.7.0",
     "gh-pages": "^1.1.0",
     "material-ui": "^0.20.0",
     "material-ui-icons": "^1.0.0-beta.36",
+    "npm": "^5.8.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-responsive": "^4.0.5",
